--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   padding-top: 50px;
   background-image: url('fleurs.jfif');
   background-size: cover;
-  background-image: url(Diploma\ of\ Information\ Technology.jpeg);
+  background-image: url(photo\ formulaire.jpeg);
 }
 .container {
   background-color: white;
